--- a/index.html
+++ b/index.html
@@ -62,8 +62,27 @@
     <!-- about -->
     <section class="about">
       <div class="container">
-        <div class="grid-2"></div>
+        <div class="grid-2">
+          <div class="center">
+            <i class="fas fa-laptop-code fa-10x"></i>
+          </div>
+          <div>
+            <h3>about us</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem
+              tempora temporibus consequatur inventore optio vitae odit sint
+              nostrum, itaque dignissimos modi deleniti soluta id eaque nulla!
+              Corrupti tempore quam suscipit ducimus, eaque recusandae molestias
+              ut. Explicabo incidunt ducimus ipsum ut!
+            </p>
+          </div>
+        </div>
       </div>
     </section>
+
+    <!-- footer -->
+    <footer>
+      <p>traversy media &copy; 2021</p>
+    </footer>
   </body>
 </html>
