mobile responsive portrait & landscape

--- a/index.html
+++ b/index.html
@@ -17,23 +17,21 @@
   <body>
     <!-- showcase -->
     <header class="showcase">
-      <div class="container">
-        <div class="content">
-          <img src="/image/logo.png" class="logo" alt="image" />
-          <h1 class="content-title">Welcome To Traversy Media</h1>
-          <p class="content-text">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe,
-            deleniti!
-          </p>
-        </div>
+      <div class="content">
+        <img src="/image/logo.png" class="logo" alt="image" />
+        <h1 class="content-title">Welcome To Traversy Media</h1>
+        <p class="content-text">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe,
+          deleniti!
+        </p>
       </div>
     </header>
 
     <!-- services -->
     <section class="services">
-      <div class="container grid-3">
+      <div class="container grid-3 center">
         <div>
-          <i class="fab fa-youtube fa-3x"></i>
+          <i class="fab fa-youtube fa-3x clr-red"></i>
           <h2>youtube</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
@@ -41,16 +39,16 @@
           </p>
         </div>
         <div>
-          <i class="fab fa-facebook fa-3x"></i>
-          <h2>youtube</h2>
+          <i class="fab fa-facebook fa-3x clr-blue"></i>
+          <h2>facebook</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
             excepturi.
           </p>
         </div>
         <div>
-          <i class="fab fa-twitter fa-3x"></i>
-          <h2>youtube</h2>
+          <i class="fab fa-twitter fa-3x clr-skyblue"></i>
+          <h2>twitter</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
             excepturi.
@@ -60,7 +58,7 @@
     </section>
 
     <!-- about -->
-    <section class="about">
+    <section class="about bg-light">
       <div class="container">
         <div class="grid-2">
           <div class="center">
@@ -81,7 +79,7 @@
     </section>
 
     <!-- footer -->
-    <footer>
+    <footer class="center bg-dark">
       <p>traversy media &copy; 2021</p>
     </footer>
   </body>
